2009-05-05	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Add hint that we'll need to update library version 
	  information before the next release, due to the added APIs.
	* docs/reference/exo-docs.sgml, 
	  docs/reference/tmpl/exo-simple-job.sgml, 
	  docs/reference/tmpl/exo-job.sgml, docs/reference/exo-sections.txt: 
	  Add new section for ExoJob and ExoSimpleJob.
	* exo/exo-job.c, exo/exo-simple-job.c: Improve the API documentation 
	  and associate class methods with the signals of ExoJob.

2009-05-05	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/exo.types, exo/Makefile.am, exo/exo-job.{c,h}, 
	  exo/exo-simple-job.{c,h}, exo/exo.h: Add ExoJob and ExoSimpleJob. 
	  They come from Thunar and can be used to wrap threaded/asynchronous
	  operations with objects that support signals and subclassing.

2009-04-13	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, docs/reference/tmpl/exo-cell-renderer-icon.sgml,
	  exo/Makefile.am, exo/exo-cell-renderer-icon.c: Add GIO to the 
	  dependencies and bump GLib to 2.16, GTK+ to 2.14. Add "gicon" 
	  property to ExoCellRendererIcon. It benefits from the same SVG 
	  speedup as the icon property.

2009-04-12  Stephan Arts <stephan@xfce.org>

	* == Released 0.3.101 ==
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.

2009-04-08	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, docs/manual/da/images/, docs/manual/gl/images/: Fix
	  broken build due to incomplete integration of the Danish and Galician
	  manual translations.
	* exo-helper/exo-helper-launcher-dialog.c: Add gettext() call around
	  two strings which are already as translatable with N_() (bug #5203).

2009-02-24  Stephan Arts <stephan@xfce.org>

	* == Released 0.3.100 ==
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.

2009-01-25	Jannis Pohlmann <jannis@xfce.org>

	* == Released 0.3.99.1 == 
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.
