@@ -1,3 +1,9 @@
+2009-05-11	Nick Schermer <nick@xfce.org>
+
+	* exo/exo-job.c, exo/exo-cell-renderer-icon.c: Fix compiler warnings.
+	* exo-open/main.c: Ignore unknown options so the user can send
+	  arguments to the exo-open terminal parameters.
+
 2009-05-05	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in: Add hint that we'll need to update library version 
